# WEB_1.1_HW_2

./: Pipfile  pyproject.toml
flask-docker-app/: Dockerfile  app.py  requirements.txt
